tests/NormalTests/paczka2/big_fuzzy/99392397.err
Error in line 2: 4Xn9U A89 37,5
Error in line 37: a7f7epxlfMJ S886 28,9
Error in line 54: 4Xn9U A988 49,3
Error in line 60: 8M6MR A460 76,0
Error in line 56: A89 A988 157,6
Error in line 78: rOx A988 19,9
Error in line 72: kTXEnIv7bi A988 5,4
Error in line 84: kTXEnIv7bi A89 20,1
Error in line 96: rOx S886 0,7
Error in line 98: rOx A988 10,3
Error in line 100: rhpHmtwC A89 10,7
Error in line 115: rOx A89 84,3
Error in line 123: kTXEnIv7bi A460 351,0
Error in line 117: rOx A460 74,9
Error in line 138: kTXEnIv7bi S886 41,3
Error in line 149: a7f7epxlfMJ S886 95,3
Error in line 150: a7f7epxlfMJ A988 12,1
Error in line 152: a7f7epxlfMJ A460 11,5
Error in line 153: 4Xn9U S886 58,8
Error in line 158: A89 A988 15,0
Error in line 159: rhpHmtwC A89 43,3
Error in line 154: a7f7epxlfMJ A89 85,6
Error in line 156: 4Xn9U A988 69,7
Error in line 160: A89 S886 74,1
Error in line 163: 4Xn9U A89 36,0
Error in line 168: rhpHmtwC A460 -1,6
Error in line 169: a7f7epxlfMJ S886 38,6
Error in line 175: rOx A988 66,2
Error in line 161: rhpHmtwC A460 43,9
Error in line 177: a7f7epxlfMJ A460 53,5
Error in line 181: rhpHmtwC A89 97,0
Error in line 201: a7f7epxlfMJ A460 61,7
Error in line 205: ?A4]0
Error in line 203: rOx A460 33,8
Error in line 213: rOx A460 78,00
Error in line 216: 4Xn9U A988 22,2
Error in line 224: rOx A89 ¿1,9
Error in line 223: A89 S886 44,3
Error in line 225: A89 A460 92,9
Error in line 236: A89 A89 53,
Error in line 230: rOx A89 164,0
Error in line 232: 8M6MR A988 143,2
